--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-source
 
 script:
-  - mkdir ./travis-cache && wget https://phar.phpunit.de/phpunit-4.8.27.phar -O ./travis-cache/phpunit.phar && if [[ "$COLLECT_COVERAGE" == "true" ]]; then php ./travis-cache/phpunit.phar --coverage-text --coverage-clover=coverage.clover; else php ./travis-cache/phpunit.phar --no-coverage; fi
+  - if [[ "$COLLECT_COVERAGE" == "true" ]]; then phpunit --coverage-text --coverage-clover=coverage.clover; else phpunit; fi
 
 after_script:
   - if [[ "$COLLECT_COVERAGE" == "true" ]]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
